# LMS-MSD

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  docker-compose.yml  package-lock.json  pull_request_template.md
backend/: .env.example  Dockerfile  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
backend/api/: asgi.py  settings.py  settings_test.py  urls.py  views.py
backend/api/tests/: test_main_models.py  test_main_serializers.py  test_main_views.py  test_user_models.py  test_user_serializers.py  test_user_views.py
backend/main/: admin.py  models.py  serializers.py  urls.py  views.py
backend/main/migrations/: 0001_initial.py  0002_experiment_machine_machineexperimentconnector_sample_usersampleconnector.py  0002_sample_user.py  0003_alter_experiment_created_at_alter_machine_created_at_and_more.py  0003_auto_20230430_0016.py  0004_alter_experiment_created_at_alter_machine_created_at_and_more.py  0004_auto_20230504_2248.py  0005_alter_experiment_created_at_alter_machine_created_at_and_more.py  0005_auto_20230507_1148.py  0006_alter_experiment_created_at_alter_machine_created_at_and_more.py  0006_rename_time_takes_machine_duration.py  0007_alter_experiment_created_at_alter_machine_created_at_and_more.py  0007_auto_20230515_1323.py
backend/main/tests/: test_main.py
backend/user/: models.py  serializers.py  urls.py  validator.py  views.py
backend/user/migrations/: 0001_initial.py  0002_user.py  0002_user_lab_manager.py
backend/user/tests/: test_user.py
(+80 files in other folders)
