[metadata]
name = LMSMSD
description = LMSMSD is a laboratory scheduling system
author = Max Kovalov, Desmond Gilmour
license = MIT
platforms = Ubuntu
classifiers = 
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires = 
    # Standard dependencies
    asgiref
    backports.zoneinfo;python_version<"3.9"
    django
    python-dotenv
    djangorestframework
    django-cors-headers
    requests

    # PlanetScale dependencies
    pymysql
    django-mysql
    mysqlclient
    sqlparse
    pytz

    # auth dependencies
    Authlib
python_requires = >=3.9
package_dir = 
    = .
zip_safe = no

[options.extras_require]
testing = 
    pytest
    pytest-django
    pytest-cov
    tox
    mypy
    flake8

[options.package_data]
LMSMSD = py.typed

[flake8]
max-line-length = 88
